<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mimovistartest.feature.user.list.UsersListViewModel" />

        <variable
            name="loadMoreClicked"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue"
        tools:context=".feature.user.list.UserListFragment">
        
        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_height"
            android:hint="@string/search_hint"
            android:background="@color/white"
            android:textCursorDrawable="@null"
            />

        <LinearLayout
            android:id="@+id/layout_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/et_search"
            android:focusable="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:layout_marginStart="@dimen/layout_margin_min"
                android:layout_marginEnd="@dimen/layout_margin_1"
                android:textColor="@color/white"
                />
            <CheckBox
                android:id="@+id/cb_sort_by_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChechBoxSort"
                android:text="@string/sort_by_name"
                />

            <CheckBox
                android:id="@+id/cb_sort_by_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChechBoxSort"
                android:text="@string/sort_by_gender"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/layout_margin_1"
            android:layout_marginBottom="@dimen/layout_margin_1"
            app:items="@{viewModel.list}"
            android:layout_below="@+id/layout_sort"
            android:layout_above="@id/load_more_button"/>

        <Button
            android:id="@+id/load_more_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/load_more_button_height"
            android:onClick="@{loadMoreClicked}"
            android:padding="@dimen/layout_margin_1"
            android:text="@string/load_more"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:background="@color/gray"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_margin_2"
            android:layout_marginBottom="@dimen/layout_margin_min"
            android:layout_alignParentBottom="true"
            android:visibility="@{viewModel.scrollCompleted ? View.VISIBLE : (viewModel.loadingIndicator ? View.INVISIBLE : View.GONE)}"
            />

        <LinearLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/layout_margin_2"
            android:layout_alignParentBottom="true"
            android:visibility="@{viewModel.loadingIndicator ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/loading"
                android:textColor="@color/white"/>
            <ProgressBar
                android:id="@+id/progress_bar_loading"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/white" />
        </LinearLayout>

    </RelativeLayout>
</layout>
